fix(dasbhoard): don't stretch icons in headers

--- a/dashboard/styles/generic.scss
+++ b/dashboard/styles/generic.scss
@@ -58,6 +58,7 @@ code {
 .avatar {
     height: 2.5em;
     width: 2.5em;
+    object-fit: cover;
 }
 
 .modal-content {
